k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: seats-booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/icerzack/seats-booking/backend:latest
        imagePullPolicy: Always
        command: ["/bin/sh", "-c"]
        args: ["java -version && java -jar /app/app.jar"]
        ports:
        - containerPort: 10101
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: seats-booking
spec:
  selector:
    app: backend
  ports:
  - port: 10101
    targetPort: 10101
  type: ClusterIP
