k8s/ingress-bot.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bot-ingress
  namespace: seats-booking
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /bot(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: bot
            port:
              number: 8080
